--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vercel/node": "^5.3.26",
     "@vueuse/core": "^13.1.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.5",
     "bootstrap-vue-next": "^0.28.6",
     "pinia": "^3.0.1",
+    "resend": "^6.1.2",
     "vue": "^3.5.13",
     "vue-countup-v3": "^1.4.2",
     "vue-router": "^4.5.0"
